responsive and alignment issues fix

--- a/vtr-ui/src/app/components/battery/battery-indicator/battery-indicator.component.scss
+++ b/vtr-ui/src/app/components/battery/battery-indicator/battery-indicator.component.scss
@@ -105,10 +105,12 @@
 				.base-percentage-text {
 					position: absolute;
 					z-index: 5;
-					text-align: center;
+					text-align: left;
 					width: calc(100% - 0.8rem);
 					font-size: 6rem;
 					font-weight: bold;
+					left: 5.5rem;
+					top: 1rem;
 				}
 
 				.battery-error {
@@ -142,8 +144,9 @@
 				z-index: 5;
 				font-weight: 600;
 				width: 100%;
-				text-align: center;
+				text-align: left;
 				letter-spacing: 0;
+				left: 5.5rem;
 			}
 
 			.remaining-time {
