--- a/vtr-ui/src/app/components/menu-main/menu-main.component.scss
+++ b/vtr-ui/src/app/components/menu-main/menu-main.component.scss
@@ -93,6 +93,7 @@
 							border-bottom: none;
 							background-color: $main_darkest;
 
+
 							.user-initials {
 								display: inline-block;
 								text-align: center;
@@ -190,6 +191,15 @@
 								transform: rotate(135deg);
 								right: 2rem;
 								top: 4rem;
+							}
+							&.user{
+								padding-right: 5.2rem;
+								&::after{
+									right: 3rem;
+								}
+								&::before{
+									right: 4rem;
+								}
 							}
 						}
 					}
